# SPEX

./: .gitignore  AGENTS.md  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.MD  MANIFEST.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  TESTS.md  TODO.md  VERSION.md  build_out.txt  build_stderr.txt  deny.toml  test_out.txt  test_out2.txt
.cargo/: audit.toml
.claude/: settings.local.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.yml
.github/agents/: spex-tester.agent.md
.github/branch-protection/: main.json
.github/workflows/: auto-version.yml  ci-umbrella.yml  codeql.yml  release-readiness.yml  release.yml  rust.yml  test.yml  version-guard.yml
crates/spex-bridge/: Cargo.toml
crates/spex-bridge/benches/: db_bench.rs
crates/spex-bridge/src/: lib.rs  main.rs
crates/spex-bridge/tests/: abuse_concurrency.rs  abuse_export.rs  adversarial_parsing.rs  full_flow_integration.rs  integration.rs  load_test.rs  performance_baseline.rs
crates/spex-cli/: Cargo.toml  main.rs
crates/spex-cli/tests/: planned_cli_flow.rs
crates/spex-client/: Cargo.toml
crates/spex-client/src/: lib.rs
crates/spex-client/tests/: bridge_publish.rs  e2e_flow.rs  inbox_decrypt.rs  integration_scenarios.rs  security_replay_tamper.rs  state_encryption.rs  state_flow.rs
crates/spex-core/src/: ad.rs  crypto.rs  lib.rs  vectors.rs
crates/spex-core/tests/: vectors_v011.rs
crates/spex-mls/: Cargo.toml
crates/spex-mls/src/: lib.rs
crates/spex-mls/tests/: epoch_recovery_properties.rs  group_context.rs  mls_advanced_negative.rs  mls_membership.rs  mls_real_groups.rs  mls_rs_integration.rs  mls_scenarios.rs  planned_concurrent_updates.rs  secrets_crypto.rs  stress_group.rs
crates/spex-transport/: Cargo.toml
crates/spex-transport/src/: chunking.rs  error.rs  inbox.rs  ingest.rs  lib.rs  p2p.rs  telemetry.rs  transport.rs
crates/spex-transport/tests/: bridge_publish_http.rs  dht_gossip_random_walk.rs  p2p_backoff_churn.rs  p2p_ingest_property.rs  p2p_ingest_validation.rs  p2p_manifest_delivery.rs  p2p_manifest_recovery.rs  planned_p2p_persistence.rs  security_replay_tamper.rs  stress_chunking.rs  two_identity_flow.rs
docs/: advanced-security-threat-testing.md  bridge-api.md  bridge-tls-deployment.md  cli.md  deep-research-report.md  diagrams.md  documentation-hosting-strategy.md  index.md  integration.md  mls-advanced-scenarios-matrix.md  observability.md  operations-revocation-recovery-abuse.md  overview.md  p0.md  pending-findings-resolution-report.md  pt-BR-guide.md  release-v1-checklist.md  release-v1-go-no-go-record.md  runbook-release-operations.md  security-advisory-exceptions.md  security.md  wire-format.md
docs/archive/: README.md  pending-findings-resolution-report.md  release-v1-go-no-go-record.md
docs/decisions/: 0001-license-mpl-2.md  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: contact_card_decode.rs  grant_token_decode.rs  inbox_store_request_from_bytes.rs  mls_parse_external_commit.rs  p2p_grant_payload_validation.rs  p2p_puzzle_payload_validation.rs  parse_cbor_payload.rs  storage_request_from_bytes.rs  transport_manifest_gossip_parse.rs
scripts/: release_gate_docs.sh  release_gate_negative_test.sh  tls_validation.sh
spex-core/: Cargo.toml
spex-core/src/: aead_ad.rs  cbor.rs  error.rs  hash.rs  lib.rs  log.rs  mls_ext.rs  pow.rs  sign.rs  test_vectors.rs  types.rs  utils.rs  validation.rs
spex-core/tests/: crypto_edge_cases.rs  ctap2_cbor_vectors.rs  pow.rs  sign_validation.rs  vectors_v011.rs
