[workspace]
resolver = "2"
members = [
  "spex-core",
  "crates/spex-mls",
  "crates/spex-transport",
  "crates/spex-bridge",
  "crates/spex-cli",
  "crates/spex-client",
]

[workspace.package]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/richardikeda/SPEX"
homepage = "https://github.com/richardikeda/SPEX"
readme = "README.md"
