[package]
name = "spex-core"
version = "0.1.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
sha2 = "0.10"
blake3 = { version = "1.5", optional = true }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = "0.6"
hex = "0.4"
thiserror = "1.0"

[features]
default = []
blake3_hash = ["dep:blake3"]