[package]
name = "spex-core"
version = "0.1.1"
edition = "2021"
license = "MPL-2.0"
description = "Core primitives, canonical CBOR, validation, hashing, signatures, and PoW for the SPEX protocol."
repository = "https://github.com/richardikeda/SPEX"
homepage = "https://github.com/richardikeda/SPEX"
readme = "../README.md"
keywords = ["protocol", "security", "cryptography", "messaging", "cbor"]
categories = ["cryptography", "encoding", "network-programming"]

[lib]
path = "src/lib.rs"

[dependencies]
sha2 = "0.11"
blake3 = { version = "1.8", optional = true }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = "0.6"
hex = "0.4"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22.1"

[features]
default = []
blake3_hash = ["dep:blake3"]

[dev-dependencies]
proptest = "1"
