[package]
name = "spex-bridge"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

spex-core = { path = "../../spex-core" }

[dev-dependencies]
tempfile = "3"
tower = "0.5"
