[package]
name = "spex-bridge"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22.1"
ed25519-dalek = "2.1"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
parking_lot = "0.12.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

spex-core = { version = "0.1.1", path = "../../spex-core" }

[dev-dependencies]
criterion = "0.5"
proptest = "1"
ed25519-dalek = "2.1"
ciborium = "0.2"
spex-mls = { version = "0.1.0", path = "../spex-mls" }
spex-transport = { version = "0.1.0", path = "../spex-transport" }
tempfile = "3"
tower = "0.5"
