[package]
name = "spex-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spex"
path = "main.rs"

[dependencies]
base64 = "0.21"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
libp2p = { version = "0.53", features = ["dns", "gossipsub", "identify", "kad", "macros", "noise", "tcp", "tokio", "yamux"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }

spex-client = { path = "../spex-client" }
spex-core = { path = "../../spex-core" }
spex-transport = { path = "../spex-transport" }
spex-bridge = { path = "../spex-bridge" }

[dev-dependencies]
axum = "0.7"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1.0"
tempfile = "3"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net"] }
spex-bridge = { path = "../spex-bridge" }
spex-core = { path = "../../spex-core" }
