[package]
name = "spex-cli"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[[bin]]
name = "spex"
path = "main.rs"

[dependencies]
base64 = "0.21"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
libp2p = { version = "0.53", features = ["dns", "gossipsub", "identify", "kad", "macros", "noise", "tcp", "tokio", "yamux"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }

spex-client = { version = "0.1.0", path = "../spex-client" }
spex-core = { version = "0.1.1", path = "../../spex-core" }
spex-transport = { version = "0.1.0", path = "../spex-transport" }
spex-bridge = { version = "0.1.0", path = "../spex-bridge" }

[dev-dependencies]
axum = "0.7"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1.0"
tempfile = "3"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net"] }
spex-bridge = { version = "0.1.0", path = "../spex-bridge" }
spex-core = { version = "0.1.1", path = "../../spex-core" }
