[package]
name = "spex-cli"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Reference command-line interface for SPEX operational and integration flows."
repository = "https://github.com/richardikeda/SPEX"
homepage = "https://github.com/richardikeda/SPEX"
readme = "../../README.md"
keywords = ["protocol", "security", "cli", "messaging", "mls"]
categories = ["command-line-utilities", "cryptography", "network-programming"]

[[bin]]
name = "spex"
path = "main.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
libp2p = { version = "0.56", features = ["dns", "gossipsub", "identify", "kad", "macros", "noise", "tcp", "tokio", "yamux"] }
serde_json = "1.0"
tokio = { version = "1.51", features = ["rt-multi-thread", "macros"] }

spex-client = { version = "0.1.0", path = "../spex-client" }
spex-core = { version = "0.1.1", path = "../../spex-core" }
spex-transport = { version = "0.1.0", path = "../spex-transport" }
spex-bridge = { version = "0.1.0", path = "../spex-bridge" }

[dev-dependencies]
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = "1.0"
tempfile = "3"
tokio = { version = "1.51", features = ["rt-multi-thread", "macros", "net"] }
spex-bridge = { version = "0.1.0", path = "../spex-bridge" }
spex-core = { version = "0.1.1", path = "../../spex-core" }
