[package]
name = "spex-client"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21"
chacha20poly1305 = "0.10"
dirs = "5.0"
ed25519-dalek = "2.1"
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
thiserror = "1.0"

spex-core = { path = "../../spex-core" }
spex-mls = { path = "../spex-mls" }
spex-transport = { path = "../spex-transport" }

[dev-dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
