[package]
name = "spex-client"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "High-level client SDK for SPEX identity, state, thread, and message flows."
repository = "https://github.com/richardikeda/SPEX"
homepage = "https://github.com/richardikeda/SPEX"
readme = "../../README.md"
keywords = ["protocol", "security", "sdk", "messaging", "mls"]
categories = ["cryptography", "network-programming", "api-bindings"]

[dependencies]
base64 = "0.22"
chacha20poly1305 = "0.10"
dirs = "6.0"
ed25519-dalek = "2.1"
argon2 = "0.5"
hex = "0.4"
keyring = "4.0"
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
serde_json = "1.0"
thiserror = "2.0"

spex-core = { version = "0.1.1", path = "../../spex-core" }
spex-mls = { version = "0.1.0", path = "../spex-mls" }
spex-transport = { version = "0.1.0", path = "../spex-transport" }

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
tempfile = "3.27"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
