[package]
name = "spex-transport"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
base64 = "0.22"
ed25519-dalek = "2.1"
futures = "0.3"
hex = "0.4"
libp2p = { version = "0.53", features = [
  "dns",
  "gossipsub",
  "identify",
  "kad",
  "macros",
  "noise",
  "tcp",
  "tokio",
  "yamux",
] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "time"] }
tracing = "0.1"

spex-core = { version = "0.1.1", path = "../../spex-core" }

[dev-dependencies]
axum = "0.7"
proptest = "1"
ed25519-dalek = "2.1"
serde_cbor = "0.11"
spex-mls = { version = "0.1.0", path = "../spex-mls" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
