[package]
name = "spex-transport"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Transport, manifest, chunking, and validation paths for SPEX delivery."
repository = "https://github.com/richardikeda/SPEX"
homepage = "https://github.com/richardikeda/SPEX"
readme = "../../README.md"
keywords = ["protocol", "security", "transport", "p2p", "messaging"]
categories = ["network-programming", "cryptography"]

[dependencies]
base64 = "0.22"
ed25519-dalek = "2.1"
futures = "0.3"
hex = "0.4"
libp2p = { version = "0.53", features = [
  "dns",
  "gossipsub",
  "identify",
  "kad",
  "macros",
  "noise",
  "tcp",
  "tokio",
  "yamux",
] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "time"] }
tracing = "0.1"

spex-core = { version = "0.1.1", path = "../../spex-core" }

[dev-dependencies]
axum = "0.7"
proptest = "1"
ed25519-dalek = "2.1"
ciborium = "0.2"
spex-mls = { version = "0.1.0", path = "../spex-mls" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
